Update clean for Burgers.ipynb

--- a/code/clean for Burgers.ipynb
+++ b/code/clean for Burgers.ipynb
@@ -48,7 +48,7 @@
    "source": [
     "# Burgers Business\n",
     "\n",
-    "## Business中做Burgers的"
+    "## Business ---- Burgers"
    ]
   },
   {
@@ -135,7 +135,7 @@
    "metadata": {},
    "source": [
     "# Burger Review\n",
-    "## Review 里的 business_id是做burgers的"
+    "## Review ----- business_id ---- burgers"
    ]
   },
   {
@@ -214,7 +214,7 @@
    "metadata": {},
    "source": [
     "# User\n",
-    "## 在burgers_review里评价过的user"
+    "## burgers_review ---- user"
    ]
   },
   {
