Update clean for Burgers.ipynb

--- a/code/clean for Burgers.ipynb
+++ b/code/clean for Burgers.ipynb
@@ -269,7 +269,7 @@
    "metadata": {},
    "source": [
     "# tip\n",
-    "## 给burgers business的建议"
+    "## suggestions for the burgers business"
    ]
   },
   {
